welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: not found: value color
		setCouleurBrosse(color.RED)
                                 ^PatternPicture:15: error: not found: value color
		setCouleurBrosse(color.YELLOW)
                                 ^PatternPicture:24: error: not found: value color
		setCouleurBrosse(color.GREEN)
                                 ^PatternPicture:33: error: not found: value color
		setCouleurBrosse(color.BLUE)
                                 ^PatternPicture:40: error: not found: value levebrosse
		levebrosse() // carré bleu fait
                ^