welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def faireMotif() {
		avance()
		setCouleurBrosse(color.RED)
		baisseBrosse()
		leveBrosse()
		for (i <- 1 to 2) {
			gauche()
			avance()
		}
		baisseBrosse()
		leveBrosse() // carré rouge fait
		droite()
		avance()
		setCouleurBrosse(color.YELLOW)
		baisseBrosse()
		leveBrosse()
		avance()
		droite()
		avance()
		baisseBrosse()
		leveBrosse() // carré jaune fait
		avance()
		setCouleurBrosse(color.GREEN)
		baisseBrosse()
		leveBrosse()
		avance()
		droite()
		avance()
		baisseBrosse()
		leveBrosse() // carré vert fait
		avance()
		setCouleurBrosse(color.BLUE)
		baisseBrosse()
		leveBrosse()
		avance()
		droite()
		avance()
		baisseBrosse()
		levebrosse() // carré bleu fait
}
faireMotif()
}
